Break doc into sections and add to depploy toc

--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -189,13 +189,14 @@
     - name: Overview
       href: desktop\Managing-your-MSIX-deployment-Overview.md
       items: 
-        - name: Know your customer
+        - name: Know your target devices
           href: desktop\Managing-your-MSIX-deployment.md
         - name: MSIX service support
-          href: 
+          href: desktop\Managing-your-MSIX-deployment.md
         - name: MSIX native support
-          href: 
+          href: desktop\Managing-your-MSIX-deployment.md
         - name: MSIX Core
+          href: desktop\Managing-your-MSIX-deployment.md
           items:
           - name: Overview
             href: msix-core/msixcore.md
@@ -210,21 +211,21 @@
     - name: Create your MSIX package
       items: 
         - name: Visual Studio 
-          href: 
+          href: desktop\Managing-your-MSIX-deployment-Create.md
         - name: Converting your installer 
-          href: 
+          href: desktop\Managing-your-MSIX-deployment-Create.md
         - name: Bulk operations 
-          href: 
+          href: desktop\Managing-your-MSIX-deployment-Create.md
     - name: Distribute your MSIX in an enterprise environment
       items: 
         - name: Microsoft Endpoint Management
           items: 
             - name: Microsoft Endpoint Configuration Manager
-              href: 
+              href: desktop\Managing-your-MSIX-deployment-Enterprise.md
             - name: Microsoft Intune
-              href: 
+              href: desktop\Managing-your-MSIX-deployment-Enterprise.md
         - name: Web 
-          href: 
+          href: desktop\Managing-your-MSIX-deployment-Enterprise.md
         - name: Distribute a Windows 10 app from the web using App Installer
           items: 
             - name: Overview
@@ -259,21 +260,24 @@
           href: 
 - name: MSIX validation and troubleshooting
   items: 
-    - name: Windows Device Portal
-      href: https://docs.microsoft.com/windows/uwp/debug-test-perf/device-portal?context=/windows/msix/render
-    - name: Debug and test a packaged app
-      items:
-        - name: Run, debug, and test a packaged desktop application
-          href: desktop/desktop-to-uwp-debug.md
-        - name: Detect package identity and runtime context
-          href: detect-package-identity.md
-        - name: Test for Windows 10 in S mode
-          href: desktop/desktop-to-uwp-test-windows-s.md
-    - name: Troubleshoot MSIX containers
-      href: manage/troubleshoot-msix-container.md
-    - name: Store validation
+    - name: Overview
+      href: desktop\Managing-your-MSIX-deployment-Troubleshooting.md
       items: 
-        - name: Windows App certification 
-          href: https://docs.microsoft.com/windows/uwp/debug-test-perf/windows-app-certification-kit?context=/windows/msix/render
-        - name: Package flighting
-          href: https://docs.microsoft.com/windows/uwp/publish/package-flights?context=/windows/msix/render
+          - name: Windows Device Portal
+            href: https://docs.microsoft.com/windows/uwp/debug-test-perf/device-portal?context=/windows/msix/render
+          - name: Debug and test a packaged app
+            items:
+              - name: Run, debug, and test a packaged desktop application
+                href: desktop/desktop-to-uwp-debug.md
+              - name: Detect package identity and runtime context
+                href: detect-package-identity.md
+              - name: Test for Windows 10 in S mode
+                href: desktop/desktop-to-uwp-test-windows-s.md
+          - name: Troubleshoot MSIX containers
+            href: manage/troubleshoot-msix-container.md
+          - name: Store validation
+            items: 
+              - name: Windows App certification 
+                href: https://docs.microsoft.com/windows/uwp/debug-test-perf/windows-app-certification-kit?context=/windows/msix/render
+              - name: Package flighting
+                href: https://docs.microsoft.com/windows/uwp/publish/package-flights?context=/windows/msix/render
