--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -185,7 +185,6 @@
         - name: Modification packages
           href: 
 - name: Manage your MSIX deployment
-  href: desktop\Managing-your-MSIX-deployment-Overview.md
   items: 
     - name: Overview
       href: desktop\Managing-your-MSIX-deployment-Overview.md
@@ -210,7 +209,13 @@
           - name: Troubleshooting
             href: msix-core/msixcore-troubleshoot.md
     - name: Create your MSIX package
-      href: desktop\Managing-your-MSIX-deployment-Create.md
+      items: 
+        - name: Visual Studio 
+          href: desktop\Managing-your-MSIX-deployment-Create.md
+        - name: Converting your installer 
+          href: desktop\Managing-your-MSIX-deployment-Create.md
+        - name: Bulk operations 
+          href: desktop\Managing-your-MSIX-deployment-Create.md
     - name: Distribute your MSIX in an enterprise environment
       items: 
         - name: Microsoft Endpoint Management
