--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -144,6 +144,18 @@
               href: psf/package-support-framework.md
             - name: Run scripts with the Package Support Framework
               href: psf/run-scripts-with-package-support-framework.md
+    - name: MSIX Tool Kit
+      items: 
+        - name: Overview
+          href: tool-kit/msix-toolkit-overview.md
+        - name: MSIX Modify Package Publisher Script
+          href: tool-kit/msix-toolkit-modifypackagepublisher.md
+        - name: MSIX Batch Conversion Script
+          href: tool-kit/msix-toolkit-msixbatchconversion.md
+        - name: MSIX Connect Script
+          href: tool-kit/msix-toolkit-msixconnect.md
+        - name: MSIX App Installer Builder
+          href: tool-kit/msix-toolkit-appinstallerfilebuilder.md
 - name: Build an MSIX package with source code
   items: 
     - name: Key concepts to know before you package your app
