--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -166,11 +166,11 @@
           href: 
     - name: Packaging from the command line
       items:  
-        - name: Manual app packaging
+        - name: Overview
           href: package/manual-packaging-root.md
-        - name: Generating package
+        - name: Generating package artifacts
           href: desktop/desktop-to-uwp-manual-conversion.md 
-        - name: Create an app package with the MakeAppx.exe tool
+        - name: Create an MSIX package with the MakeAppx.exe tool
           href: package/create-app-package-with-makeappx-tool.md
         - name: Create a certificate for package signing
           href: package/create-certificate-package-signing.md
