--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -132,6 +132,8 @@
               href: psf/package-support-framework.md
             - name: Run scripts with the Package Support Framework
               href: psf/run-scripts-with-package-support-framework.md
+            - name: Launch apps with parameters
+              href: psf\psf-launch-apps-with-parameters.md
         - name: Bundling MSIX Packages
           href: packaging-tool/bundle-msix-packages.md
     - name: MSIX Toolkit
