--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -220,10 +220,8 @@
           href: desktop/powershell-msix-cmdlets.md
         - name: Using Group Policy
           href: group-policy-msix.md
-        - name: Deploying preinstalled apps
+        - name: Preinstalling packaged apps
           href: desktop/deploy-preinstalled-apps.md
-        - name: Install your app for all users
-          href: desktop/managing-your-msix-deployment-dism-provisioning.md
         - name: Install earlier versions of an MSIX app package
           href: desktop/managing-your-msix-deployment-downgrading.md
     - name: Deploy MSIX with App Installer file
