--- a/msix-src/breadcrumb/toc.yml
+++ b/msix-src/breadcrumb/toc.yml
@@ -1,3 +1,11 @@
-- name: Docs
-  tocHref: /
-  topicHref: /
+- name: Windows
+  tocHref: /windows/
+  topicHref: /windows/index
+  items:
+    - name: Apps
+      tocHref: /windows/apps/
+      topicHref: /windows/apps/index
+      items:
+        - name: MSIX
+          tocHref: /windows/msix/
+          topicHref: /windows/msix/index
