add create-psf documentation

--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -130,12 +130,16 @@
               href: psf/package-support-framework-overview.md
             - name: Get started with Package Support Framework
               href: psf/package-support-framework.md
-            - name: Run scripts with the Package Support Framework
-              href: psf/run-scripts-with-package-support-framework.md
             - name: Current working directory
               href: psf\psf-current-working-directory.md
             - name: Launch apps with parameters
               href: psf\psf-launch-apps-with-parameters.md
+            - name: Apply Package Support Framework in Visual Studio
+              href: psf\package-support-framework-vs.md
+            - name: Run scripts with the Package Support Framework
+              href: psf/run-scripts-with-package-support-framework.md
+            - name: Create a Package Support Framework
+              href: psf/create-package-support-framework.md
         - name: Bundling MSIX Packages
           href: packaging-tool/bundle-msix-packages.md
     - name: MSIX Toolkit
