--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -130,15 +130,15 @@
               href: psf/package-support-framework-overview.md
             - name: Get started with Package Support Framework
               href: psf/package-support-framework.md
-            - name: Current working directory
+            - name: Current working directory PSF
               href: psf\psf-current-working-directory.md
-            - name: Launch apps with parameters
+            - name: Launch apps with parameters using PSF
               href: psf\psf-launch-apps-with-parameters.md
             - name: Apply Package Support Framework in Visual Studio
               href: psf\package-support-framework-vs.md
             - name: Run scripts with the Package Support Framework
               href: psf/run-scripts-with-package-support-framework.md
-            - name: Create a Package Support Framework
+            - name: Create a Package Support Framework fixup
               href: psf/create-package-support-framework.md
         - name: Bundling MSIX Packages
           href: packaging-tool/bundle-msix-packages.md
