--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -176,8 +176,10 @@
           href: desktop/desktop-to-uwp-packaging-dot-net.md
         - name: Package a desktop or UWP app in Visual Studio
           href: package/packaging-uwp-apps.md
+        - name: Sign packages with Azure Key Vault
+          href: desktop/sign-with-akv-cert.md
         - name: Optimize binaries with native images
-          href: desktop/desktop-to-uwp-r2r.md  
+          href: desktop/desktop-to-uwp-r2r.md
     - name: CI/CD pipelines for MSIX builds
       href: desktop/azure-dev-ops.md
     - name: Package from the command line
