--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -190,8 +190,12 @@
           href: desktop/sign-with-akv-cert.md
         - name: Optimize binaries with native images
           href: desktop/desktop-to-uwp-r2r.md
-    - name: CI/CD pipelines for MSIX builds
-      href: desktop/azure-dev-ops.md
+    - name: MSIX and CI/CD pipelines
+      items:
+        - name: CI/CD pipelines for MSIX builds
+          href: desktop/azure-dev-ops.md
+        - name: MSIX Packaging Extension
+          href: desktop/msix-packaging-extension.md
     - name: Package from the command line
       items:  
         - name: Overview
