--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -154,6 +154,8 @@
               href: psf/create-package-support-framework.md
         - name: Bundling MSIX Packages
           href: packaging-tool/bundle-msix-packages.md
+        - name: Group applications under a folder in the Start menu
+          href: packaging-tool/create-start-group.md
     - name: MSIX Toolkit
       items: 
         - name: Overview
