--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -232,6 +232,8 @@
           href: package/optional-packages-with-executable-code.md 
         - name: Building an app with a modification package 
           href: package/modification-package-developers.md
+    - name: Desktop Bridge - Smooth User Transition & Data Migration
+      href: desktop/desktop-bridge-data-migration.md
 - name: Manage your MSIX deployment
   items: 
     - name: Overview
