--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -62,6 +62,8 @@
           href: customer/db-systel.md
         - name: ECNO
           href: customer/ecno.md
+        - name: SAP
+          href: customer/sap.md
         - name: Schneider Electric
           href: customer/schneider-electric.md
     - name: MSIX partners
