--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -326,6 +326,8 @@
           href: msix-core/msixcore-troubleshoot.md  
     - name: Deployment Validation and Troubleshooting
       href: desktop\managing-your-msix-deployment-troubleshooting.md
+    - name: Enforcing Package Integrity
+      href: desktop\tamper-protection.md
     - name: Reset and Repair MSIX Apps
       href: desktop\managing-your-msix-reset-and-repair.md
 - name: MSIX validation and troubleshooting
