--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -298,6 +298,8 @@
           href: desktop/managing-your-msix-deployment-retail.md
         - name: Microsoft Store
           href: /windows/uwp/publish/?context=/windows/msix/render
+    - name: MSIX Shared Package Container
+      href: manage/shared-package-container.md
     - name: MSIX package updates
       items: 
         - name: Overview
