--- a/msix-src/toc.yml
+++ b/msix-src/toc.yml
@@ -298,7 +298,7 @@
           href: desktop/managing-your-msix-deployment-retail.md
         - name: Microsoft Store
           href: /windows/uwp/publish/?context=/windows/msix/render
-    - name: MSIX Shared Package Container
+    - name: Shared package container
       href: manage/shared-package-container.md
     - name: MSIX package updates
       items: 
